// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meter > render with  1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #b3144d;
}

.emotion-5 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="0"
      role="meter"
      title="MyTitle"
    >
      <p
        class="emotion-0 emotion-1"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-2 emotion-3 emotion-1"
        >
          veryWeak
        </span>
      </p>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          style="background-color: rgb(179, 20, 77); width: 20%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with medium password 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: yellow;
}

.emotion-5 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="2"
      role="meter"
      title="MyTitle"
    >
      <p
        class="emotion-0 emotion-1"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-2 emotion-3 emotion-1"
        >
          medium
        </span>
      </p>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          style="background-color: yellow; width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with strong value 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #22674e;
}

.emotion-5 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="3"
      role="meter"
      title="MyTitle"
    >
      <p
        class="emotion-0 emotion-1"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-2 emotion-3 emotion-1"
        >
          strong
        </span>
      </p>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          style="background-color: rgb(34, 103, 78); width: 80%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with very strong value 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #22674e;
}

.emotion-5 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="4"
      role="meter"
      title="MyTitle"
    >
      <p
        class="emotion-0 emotion-1"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-2 emotion-3 emotion-1"
        >
          veryStrong
        </span>
      </p>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          style="background-color: rgb(34, 103, 78); width: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with weak value 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #7c5400;
}

.emotion-5 {
  background-color: #f3f3f4;
  border-radius: 0.25rem;
  height: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-7 {
  border-radius: 0.25rem;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="1"
      role="meter"
      title="MyTitle"
    >
      <p
        class="emotion-0 emotion-1"
        id="meter-label"
      >
        MyTitle
        <span
          class="emotion-2 emotion-3 emotion-1"
        >
          weak
        </span>
      </p>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
          style="background-color: rgb(124, 84, 0); width: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
